# schedule-assistant-bot

./: .gitignore  ChangeLog.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/bot/: config.py  main.py  quotes.py  schedule_sending.py  telegram_bot.py  utils.py
src/data/: localization.json
src/data/schedules/: rus_schedule.json  ukr_schedule.json
src/database/: db.py
src/handlers/: admin_handlers.py  assignments_handlers.py  main_handlers.py  quotes_handlers.py  schedule_handlers.py  settings_handlers.py  sticker_handlers.py
